--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "path-to-regexp": "2.4.0",
     "qs": "^6.7.0",
     "vue": "2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
